# misis2024s-23-02-moskvin-v-a

./: .gitignore  CMakeLists.txt  codeforces.id  need.txt  queuelstpr.cpp  stack.cpp  stacklst.cpp  status.md  test.cpp  testsomething.cpp
prj.lab/: CMakeLists.txt
prj.lab/bitset/: bitset.cpp  bitset.hpp
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/dynarr/: dynarr.cpp  dynarr.hpp
prj.lab/queuearr/: queuearr.cpp  queuearr.hpp
prj.lab/queuelst/: queuelst.hpp
prj.lab/queuelstpr/: CMakeLists.txt  queuelstpr.cpp  queuelstpr.hpp
prj.lab/rational/: rational.cpp  rational.hpp
prj.lab/stack/: CMakeLists.txt  stack.cpp  stack.hpp
prj.lab/stackarr/: CMakeLists.txt  stackarr.cpp  stackarr.hpp
prj.lab/stacklst/: CMakeLists.txt  stacklst.cpp  stacklst.hpp
prj.test/: CMakeLists.txt  dynarr.cpp  test_bitset.cpp  test_complex.cpp  test_dynarr.cpp  test_queuearr.cpp  test_queuelstpr.cpp  test_rational.cpp  test_stack.cpp  test_stackarr.cpp  test_stacklst.cpp
